--- a/package.json
+++ b/package.json
@@ -3,34 +3,28 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "heroku-postbuild": "ng build --configuration=production"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.0.0",
-    "@angular/cli": "~13.0.4",
     "@angular/common": "~13.0.0",
     "@angular/compiler": "~13.0.0",
-    "@angular/compiler-cli": "~13.0.0",
     "@angular/core": "~13.0.0",
     "@angular/fire": "^7.2.1",
     "@angular/forms": "~13.0.0",
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
-    "express": "^4.17.3",
     "firebase": "^9.4.0",
     "ngx-bootstrap": "^8.0.0",
     "ngx-indexed-db": "^10.0.0",
-    "path": "^0.12.7",
     "rxfire": "^6.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
-    "typescript": "~4.4.3",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -46,9 +40,5 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.4.3"
-  },
-  "engines": {
-    "node": "v16.11.0",
-    "npm": "8.0.0"
   }
 }
